tests/ui/missing/missing-main.rs
fn mian() { } //~ ERROR `main` function not found in crate `missing_main`

// ferrocene-annotations: fls_maw4u1o8q37u
// Crates
//
// ferrocene-annotations: fls_8jb3sjqamdpu
// Program Entry Point
